<resources>
    <string name="app_name">pollerexpress</string>
    <string name="create_game_button_text">Create New Game</string>
    <string name="create_game_button_text2">Create Game</string>
    <string name="start_game_button_text">Start Game</string>
    <string name="join_game_text">Join</string>
    <string name="game_name_text">Name:</string>
    <string name="players_text">Players:</string>
    <string name="in_game_text">In Game:</string>
    <string name="num_players_text"># of players:</string>
    <string name="pick_your_color_text">Pick Your Color:</string>
    <string name="color_option_red_text">red</string>
    <string name="color_option_blue_text">red</string>
    <string name="color_option_yellow_text">red</string>
    <string name="color_option_green_text">red</string>
    <string name="color_option_black_text">red</string>
    <string name="card_width">"100dp"</string>
    <string name="card_height">60dp</string>
    <string name="find_new_game_button_text">Find a New Game</string>
    <string-array name="num_players_spinner_array">
        <!--todo:
        added 1 for testing perpusus, we need to take it out before we passoff-->
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
g
    <string-array name="player_color_spinner_array">
        <item>RED</item>
        <item>BLUE</item>
        <item>YELLOW</item>
        <item>GREEN</item>
        <item>BLACK</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
