<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="Views.MainActivity"
    android:background="@color/PollerBackground"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/PollerBackground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/PollerWhite"
            android:textSize="30dp"
            android:paddingLeft="40dp"
            android:text="@string/game_name_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/PollerWhite"
            android:textSize="30dp"
            android:paddingLeft="80dp"
            android:text="@string/players_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PollerWhite"
            android:textSize="30dp"
            android:gravity="right"
            android:paddingRight="30dp"
            android:text="@string/in_game_text" />

    </LinearLayout>



    <Button
        android:id="@+id/create_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:style="@style/PollerTheme"
        android:text="@string/create_game_button_text" />

</LinearLayout>

