<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_create_game"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="Views.MainActivity"
    android:background="@color/PollerBackground"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/PollerWhite"
        android:textSize="50dp"
        android:text="Create New Game" />

    <View
        android:id="@+id/divider"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        style="@style/Divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/PollerWhite"
            android:textSize="40dp"
            android:text="@string/game_name_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/PollerGray"
        android:textColor="@color/PollerWhite"
        android:textSize="40dp"
        android:text="@string/num_players_text" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/PollerGray"
        android:textColor="@color/PollerWhite"
        android:textSize="40dp"
        android:text="@string/pick_your_color_text" />

    <Button
        android:id="@+id/create_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textColor="@color/PollerWhite"
        android:background="@color/PollerBackground"
        android:text="@string/create_game_button_text2" />

</LinearLayout>

